--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -620,6 +620,10 @@ video {
   top: 0px;
 }
 
+.top-12 {
+  top: 3rem;
+}
+
 .top-2 {
   top: 0.5rem;
 }
@@ -1413,6 +1417,11 @@ video {
   background-color: rgb(38 175 127 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#2a2a33\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(42 42 51 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#39394B\] {
   --tw-bg-opacity: 1;
   background-color: rgb(57 57 75 / var(--tw-bg-opacity));
@@ -1485,11 +1494,6 @@ video {
 .bg-\[\#f8cc07\] {
   --tw-bg-opacity: 1;
   background-color: rgb(248 204 7 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f8f8f8\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 248 248 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#ff69b4\] {
@@ -1607,12 +1611,12 @@ video {
           background-clip: text;
 }
 
-.fill-none {
-  fill: none;
-}
-
 .fill-blue-600 {
   fill: #2563eb;
+}
+
+.fill-none {
+  fill: none;
 }
 
 .stroke-blue-600 {
@@ -1837,6 +1841,10 @@ video {
   font-size: 12px;
 }
 
+.text-\[13px\] {
+  font-size: 13px;
+}
+
 .text-\[14px\] {
   font-size: 14px;
 }
@@ -2018,6 +2026,11 @@ video {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-gray-900 {
@@ -2242,14 +2255,9 @@ video {
     background-color: rgb(34 33 49 / var(--tw-bg-opacity));
   }
 
-  .dark\:bg-\[\#39394B\] {
+  .dark\:bg-\[\#2a2a33\] {
     --tw-bg-opacity: 1;
-    background-color: rgb(57 57 75 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-\[\#dddde2\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(221 221 226 / var(--tw-bg-opacity));
+    background-color: rgb(42 42 51 / var(--tw-bg-opacity));
   }
 
   .dark\:bg-blue-600 {
@@ -2276,14 +2284,14 @@ video {
     color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 
-  .dark\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
   .dark\:text-gray-600 {
     --tw-text-opacity: 1;
     color: rgb(75 85 99 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .dark\:placeholder-\[\#b1aeae\]::-moz-placeholder {
