--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -652,6 +652,10 @@ video {
   right: 0.25rem;
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -967,6 +971,18 @@ video {
   height: 24px;
 }
 
+.h-1\/6 {
+  height: 16.666667%;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-2\/6 {
+  height: 33.333333%;
+}
+
 .w-1\/5 {
   width: 20%;
 }
@@ -1239,6 +1255,10 @@ video {
   justify-content: space-around;
 }
 
+.justify-items-start {
+  justify-items: start;
+}
+
 .gap-1 {
   gap: 0.25rem;
 }
@@ -1294,6 +1314,10 @@ video {
 
 .gap-y-7 {
   row-gap: 1.75rem;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .overflow-hidden {
@@ -2120,6 +2144,11 @@ video {
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-\[\#8d8c8c\] {
+  --tw-text-opacity: 1;
+  color: rgb(141 140 140 / var(--tw-text-opacity));
 }
 
 .placeholder-white::-moz-placeholder {
