--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -600,12 +600,24 @@ video {
   bottom: 0.75rem;
 }
 
+.bottom-4 {
+  bottom: 1rem;
+}
+
 .left-0 {
   left: 0px;
 }
 
 .right-0 {
   right: 0px;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.right-2 {
+  right: 0.5rem;
 }
 
 .right-3 {
@@ -618,10 +630,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.top-12 {
-  top: 3rem;
 }
 
 .top-2 {
@@ -642,18 +650,6 @@ video {
 
 .top-7 {
   top: 1.75rem;
-}
-
-.bottom-4 {
-  bottom: 1rem;
-}
-
-.right-1 {
-  right: 0.25rem;
-}
-
-.right-2 {
-  right: 0.5rem;
 }
 
 .z-0 {
@@ -942,6 +938,10 @@ video {
   height: 2.25rem;
 }
 
+.h-\[24px\] {
+  height: 24px;
+}
+
 .h-\[36\.5px\] {
   height: 36.5px;
 }
@@ -961,26 +961,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[30px\] {
-  height: 30px;
-}
-
-.h-\[24px\] {
-  height: 24px;
-}
-
-.h-1\/6 {
-  height: 16.666667%;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-.h-2\/6 {
-  height: 33.333333%;
 }
 
 .w-1\/5 {
@@ -1123,6 +1103,10 @@ video {
   width: 20%;
 }
 
+.w-\[24px\] {
+  width: 24px;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
@@ -1166,10 +1150,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[24px\] {
-  width: 24px;
 }
 
 .min-w-\[180px\] {
@@ -1253,10 +1233,6 @@ video {
 
 .justify-around {
   justify-content: space-around;
-}
-
-.justify-items-start {
-  justify-items: start;
 }
 
 .gap-1 {
@@ -1381,6 +1357,11 @@ video {
   border-color: #dddb6376;
 }
 
+.border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -1416,8 +1397,8 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-transparent {
-  border-color: transparent;
+.border-opacity-5 {
+  --tw-border-opacity: 0.05;
 }
 
 .bg-\[\#020131\] {
@@ -1470,6 +1451,11 @@ video {
   background-color: rgb(42 42 51 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#3483FA\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(52 131 250 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#39394B\] {
   --tw-bg-opacity: 1;
   background-color: rgb(57 57 75 / var(--tw-bg-opacity));
@@ -1503,6 +1489,11 @@ video {
 .bg-\[\#6254ff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(98 84 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#8C4EB0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(140 78 176 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#8a912b\] {
@@ -1617,9 +1608,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#3483FA\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(52 131 250 / var(--tw-bg-opacity));
+.bg-opacity-5 {
+  --tw-bg-opacity: 0.05;
 }
 
 .bg-gradient-to-br {
@@ -1662,10 +1652,6 @@ video {
 .bg-clip-text {
   -webkit-background-clip: text;
           background-clip: text;
-}
-
-.fill-blue-600 {
-  fill: #2563eb;
 }
 
 .fill-none {
@@ -1789,18 +1775,22 @@ video {
   padding-bottom: 0.625rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
 .pb-44 {
@@ -1853,10 +1843,6 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pb-24 {
-  padding-bottom: 6rem;
 }
 
 .text-left {
@@ -1947,14 +1933,6 @@ video {
   font-size: 65px;
 }
 
-.text-\[16px\] {
-  font-size: 16px;
-}
-
-.text-\[22px\] {
-  font-size: 22px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -2001,6 +1979,11 @@ video {
 .text-\[\#4da342\] {
   --tw-text-opacity: 1;
   color: rgb(77 163 66 / var(--tw-text-opacity));
+}
+
+.text-\[\#8d8c8c\] {
+  --tw-text-opacity: 1;
+  color: rgb(141 140 140 / var(--tw-text-opacity));
 }
 
 .text-\[\#9eabbe\] {
@@ -2117,6 +2100,11 @@ video {
   color: rgb(74 222 128 / var(--tw-text-opacity));
 }
 
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
 .text-neutral-100 {
   --tw-text-opacity: 1;
   color: rgb(245 245 245 / var(--tw-text-opacity));
@@ -2127,6 +2115,11 @@ video {
   color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .text-transparent {
   color: transparent;
 }
@@ -2134,21 +2127,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-green-500 {
-  --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-\[\#8d8c8c\] {
-  --tw-text-opacity: 1;
-  color: rgb(141 140 140 / var(--tw-text-opacity));
 }
 
 .placeholder-white::-moz-placeholder {
@@ -2165,9 +2143,21 @@ video {
   opacity: 0.8;
 }
 
-.blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-white {
+  --tw-shadow-color: #fff;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .drop-shadow-xl {
@@ -2224,14 +2214,19 @@ video {
   background-color: rgb(18 127 190 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#182b46\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 43 70 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#2559a8\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 89 168 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#2a286e\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(42 40 110 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#3579b1\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(53 121 177 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#3f437a\]:hover {
@@ -2262,11 +2257,6 @@ video {
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#2559a8\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 89 168 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#3570bd\]:hover {
