--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1878,6 +1878,10 @@ video {
   padding-top: 1rem;
 }
 
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2499,6 +2503,10 @@ video {
     flex-direction: row;
   }
 
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
   .md\:gap-60 {
     gap: 15rem;
   }
@@ -2522,6 +2530,12 @@ video {
 
   .md\:pt-0 {
     padding-top: 0px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:h-screen {
+    height: 100vh;
   }
 }
 
