--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -608,6 +608,10 @@ video {
   left: 0px;
 }
 
+.left-2 {
+  left: 0.5rem;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -652,24 +656,16 @@ video {
   top: 1.75rem;
 }
 
-.left-2 {
-  left: 0.5rem;
+.top-6 {
+  top: 1.5rem;
 }
 
-.right-5 {
-  right: 1.25rem;
+.top-10 {
+  top: 2.5rem;
 }
 
-.right-6 {
-  right: 1.5rem;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.left-4 {
-  left: 1rem;
+.top-9 {
+  top: 2.25rem;
 }
 
 .z-0 {
@@ -710,6 +706,11 @@ video {
   margin-right: 0.75rem;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
@@ -728,11 +729,6 @@ video {
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
-}
-
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
 
 .mb-0 {
@@ -881,10 +877,6 @@ video {
 
 .h-1\/4 {
   height: 25%;
-}
-
-.h-1\/6 {
-  height: 16.666667%;
 }
 
 .h-10 {
@@ -1264,10 +1256,6 @@ video {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
 .gap-1 {
   gap: 0.25rem;
 }
@@ -1323,10 +1311,6 @@ video {
 
 .gap-y-7 {
   row-gap: 1.75rem;
-}
-
-.justify-self-end {
-  justify-self: end;
 }
 
 .overflow-auto {
@@ -1458,6 +1442,11 @@ video {
   background-color: rgb(24 143 253 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#1A1A1A\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 26 26 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#1b7757\] {
   --tw-bg-opacity: 1;
   background-color: rgb(27 119 87 / var(--tw-bg-opacity));
@@ -1516,6 +1505,11 @@ video {
 .bg-\[\#4f4f62\] {
   --tw-bg-opacity: 1;
   background-color: rgb(79 79 98 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#505050\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 80 80 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#5bac42\] {
@@ -1643,6 +1637,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#282828\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 40 40 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-br {
@@ -1822,8 +1821,8 @@ video {
   padding-bottom: 0.25rem;
 }
 
-.pb-24 {
-  padding-bottom: 6rem;
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .pb-44 {
@@ -1878,20 +1877,12 @@ video {
   padding-top: 1rem;
 }
 
-.pb-16 {
-  padding-bottom: 4rem;
-}
-
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
-}
-
-.text-right {
-  text-align: right;
 }
 
 .text-justify {
@@ -1972,6 +1963,38 @@ video {
 
 .text-\[65px\] {
   font-size: 65px;
+}
+
+.text-\[\.5rem\] {
+  font-size: .5rem;
+}
+
+.text-\[\.8rem\] {
+  font-size: .8rem;
+}
+
+.text-\[\.7rem\] {
+  font-size: .7rem;
+}
+
+.text-\[\.2rem\] {
+  font-size: .2rem;
+}
+
+.text-\[\.9rem\] {
+  font-size: .9rem;
+}
+
+.text-\[1rem\] {
+  font-size: 1rem;
+}
+
+.text-\[1\.2rem\] {
+  font-size: 1.2rem;
+}
+
+.text-\[0\.8rem\] {
+  font-size: 0.8rem;
 }
 
 .font-bold {
