--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -839,10 +839,6 @@ video {
   margin-top: 2rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .ml-16 {
   margin-left: 4rem;
 }
@@ -978,6 +974,18 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[22px\] {
+  height: 22px;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[20px\] {
+  height: 20px;
 }
 
 .h-\[33px\] {
@@ -1373,14 +1381,19 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-l-full {
-  border-top-left-radius: 9999px;
-  border-bottom-left-radius: 9999px;
-}
-
 .rounded-r-full {
   border-top-right-radius: 9999px;
   border-bottom-right-radius: 9999px;
+}
+
+.rounded-t-full {
+  border-top-left-radius: 9999px;
+  border-top-right-radius: 9999px;
+}
+
+.rounded-l-full {
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
 }
 
 .border {
@@ -1889,6 +1902,10 @@ video {
   padding-top: 1rem;
 }
 
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1989,12 +2006,20 @@ video {
   font-size: 65px;
 }
 
-.text-\[16px\] {
-  font-size: 16px;
+.text-\[20px\] {
+  font-size: 20px;
 }
 
 .text-\[22px\] {
   font-size: 22px;
+}
+
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
 }
 
 .font-bold {
@@ -2019,6 +2044,10 @@ video {
 
 .font-thin {
   font-weight: 100;
+}
+
+.font-black {
+  font-weight: 900;
 }
 
 .leading-tight {
