--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1181,6 +1181,14 @@ video {
   width: 100vw;
 }
 
+.w-9\/12 {
+  width: 75%;
+}
+
+.w-\[700px\] {
+  width: 700px;
+}
+
 .min-w-\[180px\] {
   min-width: 180px;
 }
