--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1276,6 +1276,10 @@ video {
   justify-content: space-around;
 }
 
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
 .gap-1 {
   gap: 0.25rem;
 }
