--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1193,6 +1193,10 @@ video {
   width: 30rem;
 }
 
+.w-7\/12 {
+  width: 58.333333%;
+}
+
 .min-w-\[180px\] {
   min-width: 180px;
 }
@@ -1339,6 +1343,11 @@ video {
 
 .gap-y-7 {
   row-gap: 1.75rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
 .overflow-auto {
