--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -656,6 +656,30 @@ video {
   top: 2.25rem;
 }
 
+.top-12 {
+  top: 3rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.top-28 {
+  top: 7rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.top-16 {
+  top: 4rem;
+}
+
+.top-14 {
+  top: 3.5rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -1185,12 +1209,16 @@ video {
   width: 75%;
 }
 
-.w-\[700px\] {
-  width: 700px;
+.w-\[20rem\] {
+  width: 20rem;
 }
 
 .w-\[30rem\] {
   width: 30rem;
+}
+
+.w-6\/12 {
+  width: 50%;
 }
 
 .w-7\/12 {
@@ -1282,10 +1310,6 @@ video {
 
 .justify-around {
   justify-content: space-around;
-}
-
-.justify-evenly {
-  justify-content: space-evenly;
 }
 
 .gap-1 {
@@ -1396,6 +1420,10 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .rounded-l-full {
@@ -1684,6 +1712,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#363559\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 53 89 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-br {
@@ -2018,6 +2051,14 @@ video {
   font-size: 20px;
 }
 
+.text-\[4rem\] {
+  font-size: 4rem;
+}
+
+.text-\[1rem\] {
+  font-size: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -2219,6 +2260,15 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
+.text-\[\#1C72B2\] {
+  --tw-text-opacity: 1;
+  color: rgb(28 114 178 / var(--tw-text-opacity));
+}
+
+.text-\[\"\#1C72B2\"\] {
+  color: "#1C72B2";
+}
+
 .placeholder-white::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(255 255 255 / var(--tw-placeholder-opacity));
@@ -2355,6 +2405,11 @@ video {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#2a286e\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(42 40 110 / var(--tw-text-opacity));
 }
 
 .focus\:z-10:focus {
