--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1690,6 +1690,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#363559\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 53 89 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
@@ -2225,6 +2230,11 @@ video {
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
+}
+
+.text-\[\#1C72B2\] {
+  --tw-text-opacity: 1;
+  color: rgb(28 114 178 / var(--tw-text-opacity));
 }
 
 .placeholder-white::-moz-placeholder {
