--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -988,6 +988,14 @@ video {
   height: 100vh;
 }
 
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-1\/6 {
+  height: 16.666667%;
+}
+
 .w-1\/5 {
   width: 20%;
 }
