--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1020,6 +1020,14 @@ video {
   height: 100vh;
 }
 
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[60px\] {
+  height: 60px;
+}
+
 .\!w-px {
   width: 1px !important;
 }
@@ -1243,6 +1251,42 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[150px\] {
+  width: 150px;
+}
+
+.w-\[250px\] {
+  width: 250px;
+}
+
+.w-\[450px\] {
+  width: 450px;
+}
+
+.w-\[550px\] {
+  width: 550px;
+}
+
+.w-\[750px\] {
+  width: 750px;
+}
+
+.w-\[650px\] {
+  width: 650px;
+}
+
+.w-\[400px\] {
+  width: 400px;
 }
 
 .min-w-\[180px\] {
